# mastodata

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
.github/workflows/: build-push.yaml  lint-test.yaml  pre-commit.yaml  sink-lint-test.yaml  vent-lint-test.yaml
sink/: Dockerfile
sink/src/: main.rs
task/: Dockerfile  Makefile
task/src/: hll.c  hll.h  main.c
vent/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
vent/src/vent/: __main__.py
